k8s/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planmate-minio-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - minio.salakis.online
      secretName: minio-tls-secret
  rules:
    - host: minio.salakis.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planmate-minio-console
                port:
                  number: 9090
